# waves

./: .dccache  .gitignore  .~lock.SN_ms_hem_V2.0.csv#  .~lock.formatted_daily_sun_spot_data.csv#  CMakeLists.txt  Makefile  README.md  SN_ms_hem_V2.0.csv  Waves  daily_sun_spot_data.info  formatted_daily_sun_spot_data.csv.old  fourier.cpp  head.h  header.h  main  main.cpp  parseJSON.cpp  plotSine.cpp  scratch
include/: date_converter.h.bak  head.h  header.h  matplotlibcpp.h  wx  wx.h
misc/: SN_ms_hem_V2.0.csv
misc/test/: testSine.cpp  testSineNcurses.cpp
src/: convert_date.py  curses.cpp.old  fourier.cpp  main.cpp  parseJSON.cpp  parse_json.cpp  plotSine.cpp  show.cpp  sine.cpp.old  sine_wave.cpp
src/include/: header.h  main.cpp
test/: curses.cpp  graph  graph_test.cpp  sine_wave.cpp
